# Valore_aggiunto_imprese

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: countries.yaml  r2_paths.yaml  sectors.yaml  settings.yaml  size_classes.yaml  sources.yaml
docs/: data_contract.md  dizionario_dati.md  fonti.md  metodologia.md  note_qualita.md
notebooks/: 01_esplorazione_fonti_eurostat_sbs.ipynb  02_esplorazione_business_demography.ipynb  03_esplorazione_oecd_sdbs.ipynb  04_fonti_istat_italia_granulare.ipynb  05_confronto_paesi_classi_ufficiali.ipynb  06_focus_settoriale.ipynb  07_metodologia_stima_classi_fini.ipynb  08_grafici_analisi_commentati.ipynb  09_produttivita_apparente_settori_sbs.ipynb
scripts/: 01_download_eurostat_sbs.py  02_download_business_demography.py  03_download_oecd_sdbs.py  04_download_istat_sources.py  05_build_clean_datasets.py  06_validate_outputs.py  07_export_csv_json.py  08_run_full_pipeline.py
src/: project_config.py
src/export/: export_csv_json.py
src/sources/: eurostat_business_demography.py  eurostat_sbs.py  istat_sources.py  oecd_sdbs.py
src/transform/: build_clean_datasets.py
src/utils/: api_utils.py  chart_utils.py  dataframe_utils.py  io_utils.py  validation_utils.py
valore_aggiunto_imprese/: analysis.py  config.py  export.py  pipeline.py  sources.py  transform.py  utils.py
